--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          = link_to 'Brand', root_path, {:class => 'navbar-brand' }
+          = link_to 'WK stats', root_path, {:class => 'navbar-brand' }
         #bs-navbar-collapse-1.collapse.navbar-collapse
           %ul.nav.navbar-nav
             - @navbar.each do |menu_item|
