--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require bootstrap/dist/css/bootstrap
  *= require bootstrap-daterangepicker
+ *= require components-font-awesome
  *= require_tree .
  *= require_self
  */
