heroku fonts fix

--- a/app/views/desktop/index.html.haml
+++ b/app/views/desktop/index.html.haml
@@ -4,7 +4,7 @@
   .user-info
     .pull-right
       %button.btn.btn-default{'data-ajax-refresh' => true, 'data-url' => users_update_path}
-        %i{class: "fa fa-refresh"}
+        %i{class: "glyphicon glyphicon-refresh"}
     %h2.username 
       = @user['username']
     %h4 
