add ajax refresh

--- a/app/views/characters/index.html.haml
+++ b/app/views/characters/index.html.haml
@@ -1,3 +1,6 @@
+.pull-right
+  %button.btn.btn-default{'data-ajax-refresh' => true, 'data-url' => logs_generate_path}
+    %i{class: "glyphicon glyphicon-refresh"}
 %h1 Characters list
 %table.table.table-striped.table-hover.character-list
   %thead
