--- a/app/views/characters/index.html.haml
+++ b/app/views/characters/index.html.haml
@@ -22,8 +22,8 @@
             = character.character
         %td= character.meaning
         %td= character.type
-        %td= character.current_log.srs
-        %td= character.logs.count
+        %td= character.logs.last.srs
+        %td= character.logs.size
         %td= character.created_at.strftime('%B %e at %l:%M %p')
         %td= link_to 'Show', character_path(character)
 = will_paginate @characters, :renderer => BootstrapPagination::Rails
