--- a/app/views/desktop/index.html.haml
+++ b/app/views/desktop/index.html.haml
@@ -15,7 +15,10 @@
       = @user['level']
     %h4 
       last new log:
-      = @last_update.strftime('%B %e at %l:%M %p')
+      = @last_update.strftime(Rails.application.config.date_format_long)
+    %h4 
+      next lesson:
+      = @last_update.strftime(Rails.application.config.date_format_long)
 %hr
 .row
   .col-xs-12
