--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,27 +13,9 @@
  *= require bootstrap/dist/css/bootstrap
  *= require bootstrap-daterangepicker
  *= require components-font-awesome
- *= require_tree .
+ *= require bootstrap-select
  *= require_self
  */
 
- /* heroku fonts fix :( */
-
- @font-face {
-	font-family: 'Glyphicons Halflings';
-	src: font-url('bootstrap/dist/fonts/glyphicons-halflings-regular.eot');
-	src: font-url('bootstrap/dist/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
-		 font-url('bootstrap/dist/fonts/glyphicons-halflings-regular.woff') format('woff'),
-		 font-url('bootstrap/dist/fonts/glyphicons-halflings-regular.ttf') format('truetype'),
-		 font-url('bootstrap/dist/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
- }
- @font-face {
-	font-family: 'FontAwesome';
-	src: font-url('components-font-awesome/fonts/fontawesome-webfont.eot?v=4.0.3');
-	src: font-url('components-font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'),
-		 font-url('components-font-awesome/fonts/fontawesome-webfont.woff?v=4.0.3') format('woff'),
-		 font-url('components-font-awesome/fonts/fontawesome-webfont.ttf?v=4.0.3') format('truetype'),
-		 font-url('components-font-awesome/fonts/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
-	font-weight: normal;
-	font-style: normal;
- }
+@import "base/*";
+@import "*";
