--- a/app/views/characters/index.html.haml
+++ b/app/views/characters/index.html.haml
@@ -1,7 +1,4 @@
-.pull-right
-  %button.btn.btn-default{'data-ajax-refresh' => true, 'data-url' => logs_generate_path}
-    %i{class: "glyphicon glyphicon-refresh"}
-%h1 Characters list
+= render 'toolbar'
 %table.table.table-hover.character-list
   %thead
     %tr
