--- a/app/views/characters/_toolbar.html.haml
+++ b/app/views/characters/_toolbar.html.haml
@@ -1,10 +1,12 @@
 .row.toolbar-row
   .col-xs-12
-    = form_tag '', :method => :get, :class => 'form-inline', :defaults => {} do
+    = search_form_for @q, :class => 'form-inline' do |f|
+
       .form-group
-        = render 'shared/filters/character_types'
+        = f.search_field :meaning_or_character_cont, :class => 'form-control', :placeholder => 'meaning or character'
+
       .form-group
-        = submit_tag 'Filter', name: nil, :class => 'btn btn-default'
-      .form-group.pull-right
-        %button.btn.btn-default{'data-ajax-refresh' => true, 'data-url' => logs_generate_path, 'type' => 'button'}
-          %i{class: "glyphicon glyphicon-refresh"}
+        = f.select :type_in, options_for_select(Character.types, selected: @q.type_in), {}, :class => 'form-control selectpicker', :multiple => true, :include_blank => true
+
+      .form-group
+        = f.submit 'Filter', :class => 'btn btn-default'
